--- a/src/app/template/chatTemplate/chatTemplate.component.html
+++ b/src/app/template/chatTemplate/chatTemplate.component.html
@@ -1,16 +1,33 @@
 <div class="chat-container">
   <div class="chat-messages">
-    <div class="grid gap-y-2">
-      <!-- Chat Messages -->
-      <app-chat-message text="Escribe el texto que quieres que revise." />
 
-      @for (message of messages(); track $index) { @if( message.isGpt ) {
-      <app-chat-message [text]="message.text" />
-      } @else {
-      <app-my-message [text]="message.text" />
-      } } @if (isLoading()) {
-      <app-typing-loader />
+    <div class="grid gap-y-2">
+
+      <!-- Chat Messages -->
+      <app-chat-message
+        text="Escribe el texto que quieres que revise."
+      />
+
+      @for (message of messages(); track $index) {
+        @if( message.isGpt ) {
+          <app-chat-message [text]="message.text"/>
+        } @else {
+          <app-my-message [text]="message.text"
+          />
+        }
       }
+
+
+
+
+
+
+      @if (isLoading()) {
+        <app-typing-loader />
+      }
+
+
+
     </div>
   </div>
 
@@ -19,4 +36,7 @@
     placeholder="Escribe aquí lo que deseas"
     (onMessage)="handleMessage($event)"
   />
+
+
+
 </div>
