--- a/src/app/presentation/components/chat-bubbles/chatMessage/chatMessage.component.html
+++ b/src/app/presentation/components/chat-bubbles/chatMessage/chatMessage.component.html
@@ -1,33 +1,30 @@
 <div class="col-start-1 col-end-9 p-3 rounded-lg">
   <div class="flex flex-row items-start">
-
-
-    <div class="flex items-center justify-center h-10 w-10 rounded-full bg-green-600 flex-shrink-0">
-      G
+    <div
+      class="flex items-center justify-center h-10 w-10 rounded-full bg-green-600 flex-shrink-0"
+    >
+      M
     </div>
 
-    <div class="relative ml-3 text-sm bg-black bg-opacity-25 pt-3 pb-2 px-4 shadow rounded-xl">
-      <markdown>{{ text }}</markdown>
+    <div
+      class="relative ml-3 text-sm bg-black bg-opacity-25 pt-3 pb-2 px-4 shadow rounded-xl"
+    >
+      <markdown>{{
+        !audioUrl && text.length < 10
+          ? text +
+            "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
+          : text
+      }}</markdown>
 
       @if ( audioUrl ) {
-        <audio
-          controls
-          [src]="audioUrl"
-          autoplay
-          class="w-full"
-        ></audio>
+      <audio controls [src]="audioUrl" autoplay class="w-44"></audio>
+      } @if ( imageInfo ) {
+      <img
+        [src]="imageInfo.url"
+        [alt]="imageInfo.alt"
+        class="rounded-xl w-full object-cover"
+      />
       }
-
-      @if ( imageInfo ) {
-        <img
-          [src]="imageInfo.url"
-          [alt]="imageInfo.alt"
-          class="rounded-xl w-96 h-96 object-cover"
-        />
-      }
-
     </div>
-
-
   </div>
 </div>
