--- a/src/app/presentation/pages/textToAudioPage/textToAudioPage.component.html
+++ b/src/app/presentation/pages/textToAudioPage/textToAudioPage.component.html
@@ -1,36 +1,16 @@
 <div class="chat-container">
   <div class="chat-messages">
-
     <div class="grid gap-y-2">
-
       <!-- Chat Messages -->
-      <app-chat-message
-        text="Escribe el texto que quieres que revise."
-      />
+      <app-chat-message text="Escribe el texto que quieres que revise." />
 
-      @for (message of messages(); track $index) {
-        @if( message.isGpt ) {
-          <app-chat-message
-            [text]="message.text"
-            [audioUrl]="message.audioUrl"
-          />
-        } @else {
-          <app-my-message [text]="message.text"
-          />
-        }
+      @for (message of messages(); track $index) { @if( message.isGpt ) {
+      <app-chat-message [text]="message.text" [audioUrl]="message.audioUrl" />
+      } @else {
+      <app-my-message [text]="message.text" />
+      } } @if (isLoading()) {
+      <app-typing-loader />
       }
-
-
-
-
-
-
-      @if (isLoading()) {
-        <app-typing-loader />
-      }
-
-
-
     </div>
   </div>
 
@@ -40,7 +20,4 @@
     placeholder="Escribe aquí lo que deseas"
     (onMessage)="handleMessageWithSelect($event)"
   />
-
-
-
 </div>
